syntax = "proto3";
package certusone.wormholechain.wormhole;

option go_package = "github.com/wormhole-foundation/wormhole-chain/x/wormhole/types";

import "gogoproto/gogo.proto";


message Config {
  uint64 guardian_set_expiration = 1;
  bytes governance_emitter = 2;
  uint32 governance_chain = 3;
  uint32 chain_id = 4;
}
